@@ -1,5 +1,10 @@
 2014-08-31  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
+	* mime-edit.el (mime-edit-split-and-send): Do not use
+	`insert-buffer' and `goto-line'.
+
+2014-08-31  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
 	* mime-edit.el (mime-edit-pgp-get-signers): Fix `mapcar' called
 	for effect.
 
